--- a/views/newblog.hbs
+++ b/views/newblog.hbs
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Type here</h1>
+    <h1>New Blog</h1>
     <form action="/newblog" method="post">
+        <label for = "blogname">Blog Name</label>
+        <input id="blogname" name="blogname"></input>
+        <br>
+        <label for = "blogtext">Type here</label>
         <textarea id="blogtext" name="blogtext"></textarea>
         <input type="submit">
     </form>
