Started adding CSS to website

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <p>{{statusMessage}}</p>
-    <h1>WELCOME TO MY BLOG WEBSITE!!!!!!!!!!!!!!!!!</h1>
+    <h1 style="color:rgb(238, 148, 89)">WELCOME TO MY BLOG WEBSITE!!!!!!!!!!!!!!!!!</h1>
     <a href="/newblog">Make a new blog</a>
     <h2>Current blog</h2>
     <ul>
