--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <h1>{{name}}</h1>
     <p>{{text}}</p>
     <a href="/">Back</a>
