--- a/views/newblog.hbs
+++ b/views/newblog.hbs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <h1>New Blog</h1>
     <form action="/newblog" method="post">
         <label for = "blogname">Blog Name</label>
