Centered everything and made things look neat (still needs some work)

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>MADE BY COWDIPPER!!!!</h1>
+    <link rel="stylesheet" type="text/css" href="/style.css">
+    <h1>Made by Tyler Hogan</h1>
+    <a href="https://github.com/Thogan24">Visit my Github</a>
+    <br>
+    <a href="/">Back</a>
 </body>
 </html>
