--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,10 +8,12 @@
 </head>
 <body>
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <p>{{statusMessage}}</p>
-    <h1 style="color:rgb(238, 148, 89)">WELCOME TO MY BLOG WEBSITE!!!!!!!!!!!!!!!!!</h1>
+    <p style="color:lightgreen">{{statusMessage}}</p>
+    <h1 style="color:rgb(238, 148, 89)">Blog Website</h1>
     <a href="/newblog">Make a new blog</a>
-    <h2>Current blog</h2>
+    <br>
+    <a href="/about">About page</a>
+    <h2>Current blogs:</h2>
     <ul>
         {{#each blogs}}
         <li>
