Minor CSS changes

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <p style="color:lightgreen">{{statusMessage}}</p>
+    <p style="color:rgb(0, 112, 0)">{{statusMessage}}</p>
     <h1 style="color:rgb(238, 148, 89)">Blog Website</h1>
     <a href="/newblog">Make a new blog</a>
     <br>
