--- a/views/newblog.hbs
+++ b/views/newblog.hbs
@@ -13,7 +13,7 @@
         <label for = "blogname">Blog Name</label>
         <input id="blogname" name="blogname"></input>
         <br>
-        <label for = "blogtext">Type here</label>
+        <label for = "blogtext">Blog: </label>
         <textarea id="blogtext" name="blogtext"></textarea>
         <input type="submit">
     </form>
