--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,6 +14,7 @@
     <br>
     <a href="/about">About page</a>
     <h2>Current blogs:</h2>
+    <div>
     <ul>
         {{#each blogs}}
         <li>
@@ -22,5 +23,6 @@
         {{/each}}
         
     </ul>
+    </div>
 </body>
 </html>
