Making edit page (half way done roughly)

--- a/views/newblog.hbs
+++ b/views/newblog.hbs
@@ -11,10 +11,11 @@
     <h1>New Blog</h1>
     <form action="/newblog" method="post">
         <label for = "blogname">Blog Name</label>
-        <input id="blogname" name="blogname" value="SLKJFDSLDKFJLSDKFJ"></input>
+        <input id="blogname" name="blogname"></input> 
+        {{!-- value="SLKJFDSLDKFJLSDKFJ" --}}
         <br>
         <label for = "blogtext">Blog: </label>
-        <textarea id="blogtext" name="blogtext" value="SLKJFDSLDKFJLSDKFJ"></textarea>
+        <textarea id="blogtext" name="blogtext"></textarea>
         <input type="submit">
     </form>
 </body>
