editing works, but you cannot change the name

--- a/views/editblog.hbs
+++ b/views/editblog.hbs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/style.css">
     <h1>{{name}}</h1>
     
-    <form action="/newblog" method="post">
+    <form action="/editblog" method="post">
         <label for = "blogname">Blog Name</label>
         <input id="blogname" name="blogname" value="{{name}}"></input> 
         <br>
